2015-08-05  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.12.1
	- fix of the conversion of the CMAKE_PROJECT_PATH environment
	  variable into a cmake list

2015-08-03  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.12 
	- update the cmake library to the Elements 3.7 version
    - fix the E-Run command to work with the User_area without 
      version directory.

2015-06-15  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.11
	  - update the cmake library to the Elements 3.6 version.
      - contains the CMake Bootstrap Toolchain.

2015-02-26  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.10
	  - update the cmake library to the Elements 3.5 version.
      - fixes for the MacPort warnings.

2015-02-02  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.9
	  - update the cmake library to the Elements 3.4 version.
	  - various fixes for the Darwin platform.
	  - new version of the latex class with the new Euclid logo.

2014-11-07  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.8
	  - moved to the Elements 3.3 version of the cmake library.