@@ -2,7 +2,7 @@
 %{!?python_sitelib: %global python_sitelib %(%{__python} -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")}
 
 Name:           EuclidEnv
-Version:        1.12.1
+Version:        1.12.2
 Release:        1%{?dist}
 Summary:        Euclid Environment Login and Utilities
 
@@ -62,6 +62,10 @@ fi
 
 
 %changelog
+* Tue Aug 18 2015 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 1.12.2-1
+- update to the cmake library of the Elements 3.7.2 version
+- fix a bug in the toolchain crawling of projects
+
 * Wed Aug 5 2015 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 1.12.1-1
 - update to the cmake library of the Elements 3.7.1 version
 - fix of the conversion of the CMAKE_PROJECT_PATH environment variable 
