@@ -23,9 +23,14 @@
 #
 if(NOT CCFITS_FOUND)
 
-  find_path(CCFITS_INCLUDE_DIR CCfits/CCfits)
+  find_path(CCFITS_INCLUDE_DIR CCfits/CCfits
+            HINTS ENV CCFITS_INSTALL_DIR 
+            PATH_SUFFIXES include)
+  
+  find_library(CCFITS_LIBRARY CCfits
+               HINTS ENV CCFITS_INSTALL_DIR
+               PATH_SUFFIXES lib)
 
-  find_library(CCFITS_LIBRARY NAMES CCfits)
 
   set(CCFITS_LIBRARIES ${CCFITS_LIBRARY})
   set(CCFITS_INCLUDE_DIRS ${CCFITS_INCLUDE_DIR})
@@ -33,14 +38,14 @@ if(NOT CCFITS_FOUND)
 # handle the QUIETLY and REQUIRED arguments and set CCFITS_FOUND to TRUE if
 # all listed variables are TRUE
   INCLUDE(FindPackageHandleStandardArgs)
-  FIND_PACKAGE_HANDLE_STANDARD_ARGS(CCfits DEFAULT_MSG CCFITS_INCLUDE_DIR CCFITS_LIBRARY)
+  FIND_PACKAGE_HANDLE_STANDARD_ARGS(CCfits DEFAULT_MSG CCFITS_INCLUDE_DIRS CCFITS_LIBRARIES)
 
-  mark_as_advanced(CCFITS_FOUND CCFITS_INCLUDE_DIR CCFITS_LIBRARY)
+  mark_as_advanced(CCFITS_FOUND CCFITS_INCLUDE_DIRS CCFITS_LIBRARIES)
 
   find_package(Cfitsio)
 
-  set(CCFITS_LIBRARIES ${CCFITS_LIBRARIES} ${CFITSIO_LIBRARY})
-  set(CCFITS_INCLUDE_DIRS ${CCFITS_INCLUDE_DIRS} ${CFITSIO_INCLUDE_DIR})
+  set(CCFITS_LIBRARIES ${CCFITS_LIBRARIES} ${CFITSIO_LIBRARIES})
+  set(CCFITS_INCLUDE_DIRS ${CCFITS_INCLUDE_DIRS} ${CFITSIO_INCLUDE_DIRS})
 
   list(REMOVE_DUPLICATES CCFITS_LIBRARIES)
   list(REMOVE_DUPLICATES CCFITS_INCLUDE_DIRS)
