@@ -24,13 +24,16 @@
 
 if(NOT CFITSIO_FOUND)
 
-  if(CFITSIO_ROOT_DIR)
-    find_path(CFITSIO_INCLUDE_DIR fitsio.h PATHS ${CFITSIO_ROOT_DIR} PATH_SUFFIXES include include/cfitsio NO_DEFAULT_PATH)
-    find_library(CFITSIO_LIBRARY cfitsio PATHS ${CFITSIO_ROOT_DIR} PATH_SUFFIXES lib NO_DEFAULT_PATH)
-  else()
-    find_path(CFITSIO_INCLUDE_DIR fitsio.h PATH_SUFFIXES cfitsio)
-    find_library(CFITSIO_LIBRARY NAMES cfitsio)
-  endif()
+  FIND_PATH(CFITSIO_INCLUDE_DIR fitsio.h
+            HINTS ENV CFITSIO_INSTALL_DIR 
+            PATH_SUFFIXES include cfitsio include/cfitsio
+          )
+
+  FIND_LIBRARY(CFITSIO_LIBRARY cfitsio
+               HINTS ENV CFITSIO_INSTALL_DIR 
+               PATH_SUFFIXES lib
+            )
+
 
   set(CFITSIO_LIBRARIES ${CFITSIO_LIBRARY})
   set(CFITSIO_INCLUDE_DIRS ${CFITSIO_INCLUDE_DIR})
@@ -38,9 +41,9 @@ if(NOT CFITSIO_FOUND)
 # handle the QUIETLY and REQUIRED arguments and set CFITSIO_FOUND to TRUE if
 # all listed variables are TRUE
   INCLUDE(FindPackageHandleStandardArgs)
-  FIND_PACKAGE_HANDLE_STANDARD_ARGS(Cfitsio DEFAULT_MSG CFITSIO_INCLUDE_DIR CFITSIO_LIBRARY)
+  FIND_PACKAGE_HANDLE_STANDARD_ARGS(Cfitsio DEFAULT_MSG CFITSIO_INCLUDE_DIRS CFITSIO_LIBRARIES)
 
 
-  mark_as_advanced(CFITSIO_FOUND CFITSIO_INCLUDE_DIR CFITSIO_LIBRARY)
+  mark_as_advanced(CFITSIO_FOUND CFITSIO_INCLUDE_DIRS CFITSIO_LIBRARIES)
 
 endif()
