@@ -17,22 +17,24 @@
 
 if(NOT LOG4CPP_FOUND)
 
-
-FIND_PATH(LOG4CPP_INCLUDE_DIR log4cpp/Category.hh
-          PATHS "$ENV{LOG4CPP}/include" /usr/local/include /usr/include
+  FIND_PATH(LOG4CPP_INCLUDE_DIR log4cpp/Category.hh
+            HINTS ENV LOG4CPP_INSTALL_DIR
+            PATH_SUFFIXES include
           )
 
-FIND_LIBRARY(LOG4CPP_LIBRARIES log4cpp
-            PATHS "$ENV{LOG4CPP}/lib" /usr/local/lib /usr/lib
+  FIND_LIBRARY(LOG4CPP_LIBRARY log4cpp
+               HINTS ENV LOG4CPP_INSTALL_DIR
+               PATH_SUFFIXES lib
             )
 
-set(LOG4CPP_INCLUDE_DIRS ${LOG4CPP_INCLUDE_DIR})
-
+  set(LOG4CPP_INCLUDE_DIRS ${LOG4CPP_INCLUDE_DIR})
+  set(LOG4CPP_LIBRARIES ${LOG4CPP_LIBRARY})
+  
 # handle the QUIETLY and REQUIRED arguments and set LOG4CPP_FOUND to TRUE if
 # all listed variables are TRUE
   INCLUDE(FindPackageHandleStandardArgs)
-  FIND_PACKAGE_HANDLE_STANDARD_ARGS(Log4CPP DEFAULT_MSG LOG4CPP_INCLUDE_DIR LOG4CPP_LIBRARIES)
+  FIND_PACKAGE_HANDLE_STANDARD_ARGS(Log4CPP DEFAULT_MSG LOG4CPP_INCLUDE_DIRS LOG4CPP_LIBRARIES)
 
-  mark_as_advanced(LOG4CPP_FOUND LOG4CPP_INCLUDE_DIR LOG4CPP_LIBRARIES)
+  mark_as_advanced(LOG4CPP_FOUND LOG4CPP_INCLUDE_DIRS LOG4CPP_LIBRARIES)
 
 endif()
