@@ -149,7 +149,9 @@ class EmptyDirsRemover(ListProcessor):
     def process(self, variable, value):
         from os.path import isdir
         from os import listdir
-        return [s for s in value if s.endswith('.zip') or (isdir(s) and listdir(s))]
+        from os import access, R_OK
+        return [s for s in value if s.endswith('.zip') or (isdir(s) and access(s, R_OK) and listdir(s))]
+
 
 
 class UsePythonZip(ListProcessor):
